--- a/WebContent/assets/css/style.css
+++ b/WebContent/assets/css/style.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
  *
  * Template Name: Andia
  * Template URI: http://azmind.com
@@ -733,6 +733,21 @@ footer .social a:hover { background-position: left top; }
 .contact-us form input, .otro input, .contact-us form textarea {
     width: 90%;
     height: 24px;
+    border: 1px solid #ddd;
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    color: #888;
+    font-size: 13px;
+    font-style: italic;
+}
+
+.contact-us form select {
+    width: 90%;
     border: 1px solid #ddd;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
